# nn_zero_to_hero

./: .gitignore  Lecture 1 - micrograd.ipynb  Lecture 2 - building makemore.ipynb  Lecture 3a - makemore with an MLP.ipynb  Lecture 3b - makemore - activations, gradients and batchnorm.ipynb  Lecture 5 - makemore - build wavenet.ipynb  Lecture 6 - gpt from scratch.ipynb  README.md  gpt.py  pyproject.toml
.editor/: z2h.code-workspace
train_and_generate_logs/: example_1.txt  example_2.txt  example_3.txt
